<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservation">

    <TextView
        android:id="@+id/page_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtReservation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConfirmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:text="@string/txtbtnConfirmer"
        app:backgroundTint="#1A3BB5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="418dp" />

    <Button
        android:id="@+id/btnAnnuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="59dp"
        android:text="@string/txtBtnAnnuler"
        app:backgroundTint="#7E0000"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="418dp" />

    <Button
        android:id="@+id/btnRetourRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="51dp"
        android:text="@string/txtBtnRetourRes"
        app:backgroundTint="#4A4242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>